0.1.0
Fixed desktop file.
Done open system manpage.
Done edit menu.
Added help.
Now usable.

0.0.8
Fixed setting icon/text when using -u option.
Fix for qt5.
Added show italic as underline option.
Added text size option.
Added cli args/config file (~/.config/manpageeditqt.rc)
Switch tab to newly created tab.
New section inserts tab after current tab.
Added context menu to tab to change section name and/or section type.
Added 'New'.
Correctly set page properties on startup.
Updated app icon.
Fixed exporting in qt5.
User editing.
Better import/export.
Done 'About' boxes.
Added resources to install.

0.0.7
Done live search.
Redone preview/export/
Redone import.

0.0.5
Done .TP,.IP,.EX,.EE,.SM ...
Fixed getting properties from manpage.
Open now closes current doc 1st.
Done manpage properties.
Added build for qt5, (use USEQTVERSION=5 ./autogen.sh --prefix=/usr ).
Done preview ( uses xterm ).
Added clear.
Added italic/undeline.
Added bold.
Code clean.
Done close tab.
Fixed saveing/restoreing window position/size.
Redone save file.
Fixed emphasised text ending/starting in spaces
Fixed export emphasised text embeded in string.
Save last load folder.
Save last save folder.
Basic export of manpag.
Basic import of manpage.

0.0.0-0.0.4
Internal.