@@ -50,3 +50,4 @@ Makefile
 qtincs.h.gch
 qtvers
 
+*~
